enabled mobile responsiveness to embedded map

--- a/c_three_website/src/css/App.scss
+++ b/c_three_website/src/css/App.scss
@@ -47,6 +47,23 @@ body {
 }
 /* Button - end */
 
+/* Contact - start */
+.maps {
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+
+.maps iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+/* Contact - end */
+
 /* Assets - end */
 
 /* mobile-responsive - start */
@@ -64,9 +81,4 @@ body {
       width: 15em;
       margin: 0 auto;
     }    
-
-    iframe {
-      width: 490px;
-      height: 350px;
-    }
   }
